# cpp

Oving1/: CMakeLists.txt  main.cpp
Oving2/: CMakeLists.txt  oppgave1.cpp  oppgave2&3  oppgave4.cpp  oppgave5.cpp  oppgave6.cpp
Oving3/: CMakeLists.txt  oppgave1.h  oppgave2.cpp  oppgave4.cpp
Oving3/oppgave3/: Commodity.cpp  Commodity.h  oppgave3.cpp
Oving4/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Oving5/: CMakeLists.txt  oppgave1.cpp  oppgave12.cpp
Oving6/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Oving7/: CMakeLists.txt
Oving7/oppgave1/: fraction.cpp  fraction.h  main.cpp
Oving7/oppgave2/: Set.cpp  Set.h  main.cpp
Oving9/: CMakeLists.txt  main.cpp
